--- a/app/src/main/res/layout/content_properties_form.xml
+++ b/app/src/main/res/layout/content_properties_form.xml
@@ -47,7 +47,7 @@
                 </RelativeLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/txtInputName"
+                    android:id="@+id/txtInputSleepTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -56,6 +56,20 @@
                         style="@style/modifiedEditText"
                         android:ems="10"
                         android:hint="Genelde Kaçta Uyursun? (22.00 gibi)"
+                        android:inputType="textEmailAddress" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/txtInputGpa"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/gpa"
+                        style="@style/modifiedEditText"
+                        android:ems="10"
+                        android:hint="Ortalaman Kaç?"
                         android:inputType="textEmailAddress" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -199,12 +213,12 @@
 
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/txtInputReg"
+                    android:id="@+id/txtInputRentingDuration"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/txtReg"
+                        android:id="@+id/rentingDuration"
                         style="@style/modifiedEditText"
                         android:inputType="number"
                         android:hint="Evi kaç aylığına kiralamak istiyorsunuz ?" />
