--- a/app/src/main/res/layout/activity_save_house.xml
+++ b/app/src/main/res/layout/activity_save_house.xml
@@ -1,17 +1,330 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.onurkeskin.demodemobitirmeproje.view.SaveHouseActivity">
+    android:fitsSystemWindows="true"
+    tools:context="com.onurkeskin.demodemobitirmeproje.view.PropertiesFormActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="toMaingPage"
-        android:text="ToMAINPAGE"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="325dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/form_app_bar_height"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:background="@drawable/centre_background">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/centre_background">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="10dp"
+                    android:adjustViewBounds="true"
+                    android:cropToPadding="true"
+                    android:src="@drawable/enquiry_bk" />
+
+            </RelativeLayout>
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <include layout="@layout/content_saving_house_form" />
+
+    <!-- <androidx.core.widget.NestedScrollView
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:id="@+id/scrollFeed"
+         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+         <androidx.cardview.widget.CardView
+             android:id="@+id/personalDetailsCard"
+             style="@style/centreLocatorCardDesign"
+             android:layout_marginTop="10dp"
+             app:cardCornerRadius="16dp"
+             app:cardElevation="10dp">
+
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center"
+                     android:focusableInTouchMode="false"
+                     android:orientation="vertical"
+                     android:padding="10dp">
+
+                     <RelativeLayout
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <TextView
+                             android:id="@+id/welcomeText"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:layout_alignParentLeft="true"
+                             android:layout_centerVertical="true"
+                             android:text="Hoşgeldin! Seni biraz tanıyalım!"
+                             android:textColor="@color/black"/>
+
+                     </RelativeLayout>
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/txtInputSleepTime"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <EditText
+                             android:id="@+id/sleepTime"
+                             style="@style/modifiedUpdateEditText"
+                             android:ems="10"
+                             android:hint="Genelde Kaçta Uyursun? (22.00 gibi)"
+                             android:inputType="textEmailAddress" />
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/txtInputGpa"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <EditText
+                             android:id="@+id/gpa"
+                             style="@style/modifiedUpdateEditText"
+                             android:ems="10"
+                             android:hint="Ortalaman Kaç?"
+                             android:inputType="textEmailAddress" />
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/useSmokeLayout"
+                         style="@style/parent"
+                         android:layout_marginTop="10dp">
+
+                         <TextView
+                             android:id="@+id/useSmokeText"
+                             style="@style/modifiedEditText"
+                             android:text="Sigara kullanıyor musun?"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintHorizontal_bias="0.118"
+                             app:layout_constraintStart_toStartOf="parent"
+                             app:layout_constraintTop_toTopOf="parent" />
+
+                         <RadioGroup
+                             android:id="@+id/radioUseSmokeGroup"
+                             android:layout_width="wrap_content"
+                             android:layout_height="32dp"
+                             android:orientation="horizontal"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintHorizontal_bias="0.834"
+                             app:layout_constraintStart_toStartOf="parent"
+                             app:layout_constraintTop_toTopOf="parent">
+
+                             <RadioButton
+                                 android:id="@+id/radioYesSmokeButton"
+                                 android:layout_width="wrap_content"
+                                 android:layout_height="33dp"
+                                 android:onClick="useSmokeHandler"
+                                 android:text="Evet"
+                                 app:layout_constraintEnd_toEndOf="parent"
+                                 app:layout_constraintStart_toStartOf="parent"
+                                 app:layout_constraintTop_toTopOf="parent" />
+
+                             <RadioButton
+                                 android:id="@+id/radioNoSmokeButton"
+                                 android:layout_width="wrap_content"
+                                 android:layout_height="33dp"
+                                 android:layout_marginLeft="100dp"
+                                 android:onClick="useSmokeHandler"
+                                 android:text="Hayır"
+                                 app:layout_constraintEnd_toEndOf="parent"
+                                 app:layout_constraintHorizontal_bias="0.655"
+                                 app:layout_constraintStart_toStartOf="parent"
+                                 app:layout_constraintTop_toTopOf="parent" />
+
+                         </RadioGroup>
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/havePetLayout"
+                         style="@style/parent"
+                         android:layout_marginTop="10dp">
+
+                         <TextView
+                             android:id="@+id/havePetLayoutText"
+                             style="@style/modifiedEditText"
+                             android:text="Evcil hayvanın var mı?"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintHorizontal_bias="0.118"
+                             app:layout_constraintStart_toStartOf="parent"
+                             app:layout_constraintTop_toTopOf="parent" />
+
+                         <RadioGroup
+                             android:id="@+id/radioHavePetGroup"
+                             android:layout_width="wrap_content"
+                             android:layout_height="32dp"
+                             android:orientation="horizontal"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintHorizontal_bias="0.834"
+                             app:layout_constraintStart_toStartOf="parent"
+                             app:layout_constraintTop_toTopOf="parent">
+
+                             <RadioButton
+                                 android:id="@+id/radioYesPetButton"
+                                 android:layout_width="wrap_content"
+                                 android:layout_height="33dp"
+                                 android:onClick="havePetHandler"
+                                 android:text="Evet"
+                                 app:layout_constraintEnd_toEndOf="parent"
+                                 app:layout_constraintStart_toStartOf="parent"
+                                 app:layout_constraintTop_toTopOf="parent" />
+
+                             <RadioButton
+                                 android:id="@+id/radioNoPetButton"
+                                 android:layout_width="wrap_content"
+                                 android:layout_height="33dp"
+                                 android:layout_marginLeft="100dp"
+                                 android:onClick="havePetHandler"
+                                 android:text="Hayır"
+                                 app:layout_constraintEnd_toEndOf="parent"
+                                 app:layout_constraintHorizontal_bias="0.655"
+                                 app:layout_constraintStart_toStartOf="parent"
+                                 app:layout_constraintTop_toTopOf="parent" />
+
+                         </RadioGroup>
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/txtInputMob"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:layout_marginTop="10dp">
+
+                         <TextView
+                             android:id="@+id/importanceLuxuryText"
+                             style="@style/modifiedEditText"
+                             android:text="Evinizin lüks olması ne kadar önemli?"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintHorizontal_bias="0.118"
+                             app:layout_constraintStart_toStartOf="parent"
+                             app:layout_constraintTop_toTopOf="parent" />
+
+                         <Spinner
+                             android:id="@+id/spinnerLuxuryImportance"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:spinnerMode="dropdown"
+                             app:layout_constraintBottom_toBottomOf="parent"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintStart_toStartOf="parent" />
+
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/txtInputRentingDuration"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <EditText
+                             android:id="@+id/rentingDuration"
+                             style="@style/modifiedUpdateEditText"
+                             android:inputType="number"
+                             android:hint="Evi kaç aylığına kiralamak istiyorsunuz ?" />
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/priceRangeTextLayout"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <TextView
+                             android:id="@+id/priceRangeText"
+                             style="@style/modifiedEditText"
+                             android:text="Fiyat aralığınız nedir ? "
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintHorizontal_bias="0.118"
+                             app:layout_constraintStart_toStartOf="parent"
+                             app:layout_constraintTop_toTopOf="parent" />
+
+                         <Spinner
+                             android:id="@+id/spinnerPriceRange"
+                             android:layout_width="match_parent"
+                             android:layout_height="wrap_content"
+                             android:spinnerMode="dropdown"
+                             app:layout_constraintBottom_toBottomOf="parent"
+                             app:layout_constraintEnd_toEndOf="parent"
+                             app:layout_constraintStart_toStartOf="parent" />
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/sendFormLayout"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <androidx.constraintlayout.utils.widget.MotionButton
+                             android:id="@+id/circleRegisterButton"
+                             style="@style/loginButton"
+                             android:layout_gravity="center_horizontal"
+                             android:layout_marginTop="@dimen/loginViewsMargin"
+                             android:text="SEND"
+                             android:onClick="sendForm"
+                             />
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+                     <com.google.android.material.textfield.TextInputLayout
+                         android:id="@+id/txtInputFeedback"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content">
+
+                         <EditText
+                             android:id="@+id/txtFeed"
+                             style="@style/modifiedEditText"
+                             android:hint="@string/message"
+                             android:inputType="textMultiLine"
+                             android:minLines="2" />
+
+                     </com.google.android.material.textfield.TextInputLayout>
+
+                 </LinearLayout>
+
+         </androidx.cardview.widget.CardView>
+     </androidx.core.widget.NestedScrollView>-->
+
+    <!--<include layout="@layout/content_properties_form" />-->
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
